<resources>
    <string name="app_name">Enigma_MyAccount</string>
    <string name="delivery">Place Your Delivery</string>
    <string name="name" translatable="false">Name</string>
    <string name="address" translatable="false">Address</string>
    <string name="pName" translatable="false">Product Name</string>
    <string name="qty" translatable="false">Quantity</string>
    <string name="total" translatable="false">Total</string>
    <string name="price">Price</string>
    <string name="prc">75,000</string>
    <string name="request">Request</string>
    <string name="view">My Deliveries</string>
    <string name="Pr1">HP</string>
    <string name="amount">3</string>
    <string name="account">My Account</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Contact Number</string>
    <string name="editAcc">Edit Profile</string>
    <string name="viewDelivery">View Delivery Details</string>
    <string name="viewCart">View My Cart</string>
    <string name="reg">Register</string>
    <string name="regBtn">SignUp</string>
    <string name="pw">Password</string>
    <string name="cnfrm">Confirm Password</string>
    <string name="updateBtn">Update</string>
    <string name="editBtn">Delete</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>
</resources>
